--- a/docker-compose.renkx.yml
+++ b/docker-compose.renkx.yml
@@ -1,11 +1,9 @@
 version: "3.8"
 
+# docker network create --subnet 1.1.0.1/24 docker
 networks:
   docker:
     external: true
-    ipam:
-      config:
-        - subnet: ${DEFAULT_SUBNET}
 
 volumes:
   mongodb:
