--- a/.env.renkx
+++ b/.env.renkx
@@ -114,6 +114,7 @@ YD_API_LOG_DIR=../renkxlogs/yd_api
 YD_API_START_SH=./renkxservices/yd_api/start.sh
 YD_API_HTTP_WORKERS=4
 YD_API_TASK_WORKERS=4
+YD_API_MAX_REQUESTS=1
 
 #
 # 云鼎 crontab
