--- a/.env.renkx
+++ b/.env.renkx
@@ -114,7 +114,7 @@ YD_API_LOG_DIR=../renkxlogs/yd_api
 YD_API_START_SH=./renkxservices/yd_api/start.sh
 YD_API_HTTP_WORKERS=4
 YD_API_TASK_WORKERS=4
-YD_API_MAX_REQUESTS=1
+YD_API_MAX_REQUESTS=100
 
 #
 # 云鼎 crontab
@@ -128,6 +128,8 @@ YD_CRONTAB_START_SH=./renkxservices/yd_crontab/start.sh
 #
 YD_HORIZON_PHP_LOG_DIR=./renkxlogs/yd_horizon
 YD_HORIZON_START_SH=./renkxservices/yd_horizon/start.sh
+YD_HORIZON_OPEN_TEST=true
+YD_HORIZON_MAX_PROCESSES=10
 
 #
 # yd_ws json配置
