--- a/renkxservices/nginx/nginx.conf
+++ b/renkxservices/nginx/nginx.conf
@@ -31,7 +31,7 @@ http {
     # indicated by the request header Content-Length. If the stated content
     # length is greater than this size, then the client receives the HTTP
     # error code 413. Set to 0 to disable. Default is '1m'.
-    client_max_body_size 0;
+    client_max_body_size 30m;
 
     #sendfile 指令指定 nginx 是否调用 sendfile 函数（zero copy 方式）来输出文件，
     #对于普通应用，必须设为 on,
