--- a/.env.renkx
+++ b/.env.renkx
@@ -34,7 +34,7 @@ CONTAINER_PACKAGE_URL=mirrors.aliyun.com
 #
 # Nginx
 #
-NGINX_VERSION=1.20.2-alpine
+NGINX_VERSION=1.24.0-alpine3.17-slim
 NGINX_HTTP_HOST_PORT=80
 NGINX_HTTPS_HOST_PORT=443
 NGINX_CONFD_DIR=~/code/renkx/docker/dnmpconfig/nginx/conf.d
