--- a/docker-compose.renkx.yml
+++ b/docker-compose.renkx.yml
@@ -1,6 +1,6 @@
 version: "3.8"
 
-# docker network create --subnet 1.1.0.1/24 docker
+# docker network create --subnet 1.1.0.0/24 docker
 networks:
   docker:
     external: true
@@ -12,7 +12,7 @@ volumes:
 
 services:
   nginx:
-    image: nginx:${NGINX_VERSION}
+    image: arm64v8/nginx:${NGINX_VERSION}
     container_name: nginx
     hostname: nginx
     ports:
@@ -253,7 +253,7 @@ services:
       - docker
 
   mysql:
-    image: mysql:${MYSQL_VERSION}
+    image: arm64v8/mysql:${MYSQL_VERSION}
     container_name: mysql
     hostname: mysql
     # 运行实例的用户，如果不设置，mac-box-docker模式下共享和挂载同一个目录 mysql会报错
@@ -278,7 +278,7 @@ services:
       TZ: "$TZ"
 
   redis:
-    image: redis:${REDIS_VERSION}
+    image: arm64v8/redis:${REDIS_VERSION}
     container_name: redis
     hostname: redis
     ports:
